# filler-finish

./: CMakeLists.txt  Makefile  author  filler.trace  filler.vizual  inpur.txt  vdelsie.filler
includes/: filler.h  filler_vizual.h
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/srcs/ft/: ft_atoi.c  ft_bzero.c  ft_exit.c  ft_memalloc.c  ft_sorttab_ascii.c  ft_strcat.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strsplit.c
libft/srcs/ft_printf/: arg_lst_func.c  conv_b.c
libft/srcs/gnl/: get_next_line.c
srcs/: border_calc.c  border_check.c  border_clear.c  debug_files_off.c  debug_files_others_on.c  debug_files_stratmap_on.c  delete_and_clear.c  first_init.c  get_data.c  heat_calc_main.c  heat_calc_sub_fct.c  main.c  put_piece.c  strat_adjustment.c  strat_calc.c  tools_basics.c  tools_player.c  tools_read.c  tools_strat.c
vdelsie.filler.dSYM/Contents/: Info.plist
vdelsie.filler.dSYM/Contents/Resources/DWARF/: vdelsie.filler
viz/: color.c  game_state_list_utils.c  general_utils.c  image.c  key_hooks.c  main.c  read_utils.c  render.c  render_str.c
