cmake_minimum_required(VERSION 3.15)
project(c_filler C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(c_filler
        includes/filler.h
        includes/filler_vizual.h
        libft/includes/ft_printf.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/srcs/ft/ft_atoi.c
        libft/srcs/ft/ft_bzero.c
        libft/srcs/ft/ft_convbase.c
        libft/srcs/ft/ft_countwords.c
        libft/srcs/ft/ft_exit.c
        libft/srcs/ft/ft_intlen.c
        libft/srcs/ft/ft_intlen_base.c
        libft/srcs/ft/ft_isalnum.c
        libft/srcs/ft/ft_isalpha.c
        libft/srcs/ft/ft_isascii.c
        libft/srcs/ft/ft_isdigit.c
        libft/srcs/ft/ft_isprint.c
        libft/srcs/ft/ft_itoa.c
        libft/srcs/ft/ft_itoa_base.c
        libft/srcs/ft/ft_lower.c
        libft/srcs/ft/ft_lstadd.c
        libft/srcs/ft/ft_lstadd_back.c
        libft/srcs/ft/ft_lstat.c
        libft/srcs/ft/ft_lstdel.c
        libft/srcs/ft/ft_lstdelone.c
        libft/srcs/ft/ft_lstiter.c
        libft/srcs/ft/ft_lstlast.c
        libft/srcs/ft/ft_lstlen.c
        libft/srcs/ft/ft_lstmap.c
        libft/srcs/ft/ft_lstnew.c
        libft/srcs/ft/ft_memalloc.c
        libft/srcs/ft/ft_memccpy.c
        libft/srcs/ft/ft_memchr.c
        libft/srcs/ft/ft_memcmp.c
        libft/srcs/ft/ft_memcpy.c
        libft/srcs/ft/ft_memdel.c
        libft/srcs/ft/ft_memjoin.c
        libft/srcs/ft/ft_memmove.c
        libft/srcs/ft/ft_memset.c
        libft/srcs/ft/ft_putchar.c
        libft/srcs/ft/ft_putchar_fd.c
        libft/srcs/ft/ft_putendl.c
        libft/srcs/ft/ft_putendl2_fd.c
        libft/srcs/ft/ft_putendl3_fd.c
        libft/srcs/ft/ft_putendl_col.c
        libft/srcs/ft/ft_putendl_fd.c
        libft/srcs/ft/ft_putinttab.c
        libft/srcs/ft/ft_putnbr.c
        libft/srcs/ft/ft_putnbr2.c
        libft/srcs/ft/ft_putnbr_col.c
        libft/srcs/ft/ft_putnbr_endl.c
        libft/srcs/ft/ft_putnbr_fd.c
        libft/srcs/ft/ft_putstr.c
        libft/srcs/ft/ft_putstr_col.c
        libft/srcs/ft/ft_putstr_fd.c
        libft/srcs/ft/ft_puttab.c
        libft/srcs/ft/ft_sorttab_ascii.c
        libft/srcs/ft/ft_strcat.c
        libft/srcs/ft/ft_strchr.c
        libft/srcs/ft/ft_strclr.c
        libft/srcs/ft/ft_strcmp.c
        libft/srcs/ft/ft_strcpy.c
        libft/srcs/ft/ft_strdel.c
        libft/srcs/ft/ft_strdeldup.c
        libft/srcs/ft/ft_strdup.c
        libft/srcs/ft/ft_strequ.c
        libft/srcs/ft/ft_striter.c
        libft/srcs/ft/ft_striteri.c
        libft/srcs/ft/ft_strjoin.c
        libft/srcs/ft/ft_strjoin3.c
        libft/srcs/ft/ft_strlcat.c
        libft/srcs/ft/ft_strlen.c
        libft/srcs/ft/ft_strlower.c
        libft/srcs/ft/ft_strmap.c
        libft/srcs/ft/ft_strmapi.c
        libft/srcs/ft/ft_strncat.c
        libft/srcs/ft/ft_strncmp.c
        libft/srcs/ft/ft_strncpy.c
        libft/srcs/ft/ft_strnequ.c
        libft/srcs/ft/ft_strnew.c
        libft/srcs/ft/ft_strnstr.c
        libft/srcs/ft/ft_strrchr.c
        libft/srcs/ft/ft_strsplit.c
        libft/srcs/ft/ft_strstr.c
        libft/srcs/ft/ft_strsub.c
        libft/srcs/ft/ft_strtrim.c
        libft/srcs/ft/ft_strupper.c
        libft/srcs/ft/ft_tabdel.c
        libft/srcs/ft/ft_tabdup.c
        libft/srcs/ft/ft_tablen.c
        libft/srcs/ft/ft_tolower.c
        libft/srcs/ft/ft_toupper.c
        libft/srcs/ft/ft_ullintlen.c
        libft/srcs/ft_printf/arg_lst_func.c
        libft/srcs/ft_printf/conv_b.c
        libft/srcs/ft_printf/conv_bigc.c
        libft/srcs/ft_printf/conv_bigs.c
        libft/srcs/ft_printf/conv_c.c
        libft/srcs/ft_printf/conv_d_i_bigd.c
        libft/srcs/ft_printf/conv_o_bigo.c
        libft/srcs/ft_printf/conv_p.c
        libft/srcs/ft_printf/conv_percent.c
        libft/srcs/ft_printf/conv_s.c
        libft/srcs/ft_printf/conv_u_bigu.c
        libft/srcs/ft_printf/conv_x_bigx.c
        libft/srcs/ft_printf/display.c
        libft/srcs/ft_printf/ft_printf.c
        libft/srcs/ft_printf/numeric_to_str.c
        libft/srcs/ft_printf/padding.c
        libft/srcs/ft_printf/parsing.c
        libft/srcs/ft_printf/parsing_tools.c
        libft/srcs/ft_printf/precision.c
        libft/srcs/ft_printf/sign_flags.c
        libft/srcs/gnl/get_next_line.c
        srcs/border_calc.c
        srcs/border_check.c
        srcs/border_clear.c
        srcs/debug_files_off.c
        srcs/delete_and_clear.c
        srcs/first_init.c
        srcs/get_data.c
        srcs/heat_calc_main.c
        srcs/heat_calc_sub_fct.c
        srcs/main.c
        srcs/put_piece.c
        srcs/strat_adjustment.c
        srcs/strat_calc.c
        srcs/tools_basics.c
        srcs/tools_player.c
        srcs/tools_read.c
        srcs/tools_strat.c)
